--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
-  <title>Hello World</title>
-</head>
-<body class="page">
-  <header class="header">
-    <h1 class="header__title">Hello World!</h1>
-  </header>
-  <main class="main"></main>
-  <footer class="footer"></footer>
-  <script src="./script/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <title>Furniking</title>
+  </head>
+  <body class="page">
+    <header class="header">
+      <div class="header__top-bar">
+        <div class="header__bar">
+          <p class="header__text">Welcome to our online shop</p>
+          <div class="header__group">
+            <button class="button header__lang">
+              <p class="header__text">English (USD)</p>
+              <img class="header__img-arr" src="./images/header/arrow.svg" />
+            </button>
+            <div class="header__line"></div>
+            <button class="button header__log">
+              <p class="header__text">Login or Sign up</p>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="header__second-bar">
+        <div class="header__gr-logo">
+          <img class="header__img-logo" src="./images/header/logo.svg" />
+          <h1 class="header__logo">Furniking</h1>
+        </div>
+        <form class="header__search" action="" method="get">
+          <input
+            class="header__search-line"
+            placeholder="Search here"
+            type="search"
+          />
+          <button class="button header__btn-menu">
+            <p class="header__menu-text">Categories</p>
+            <img
+              class="header__img-menu-arr"
+              src="./images/header/arrow-menu.svg"
+            />
+          </button>
+          <button class="button header__btn-loupe">
+            <img class="header__img-loupe" src="./images/header/loupe.svg" />
+          </button>
+        </form>
+        <div class="header__gr-links">
+          <a class="header__gr-cart">
+            <img class="header__img-link" src="./images/header/cart.svg" />
+            <div class="header__notification">4</div>
+          </a>
+          <a class="header__gr-cart">
+            <img class="header__img-link" src="./images/header/ring.svg" />
+          </a>
+          <a class="header__gr-cart">
+            <img class="header__img-link" src="./images/header/avatar.svg" />
+          </a>
+        </div>
+      </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+    <script src="./script/index.js"></script>
+  </body>
 </html>
