feat: "first section"

--- a/index.html
+++ b/index.html
@@ -60,7 +60,143 @@
         </div>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="prev">
+        <nav class="nav">
+          <div class="nav__nav">
+            <div class="nav__sort">
+              <img class="nav__img" src="./images/nav/sort.svg" />
+              <p class="nav__sort-text">ALL COLLECTIONS</p>
+            </div>
+            <ul class="nav__links">
+              <li class="nav__list">
+                <a class="nav__link">HOME</a>
+              </li>
+              <li class="nav__list">
+                <a class="nav__link">SHOP</a>
+              </li>
+              <li class="nav__list">
+                <a class="nav__link">BLOG</a>
+              </li>
+              <li class="nav__list">
+                <a class="nav__link">ABOUT</a>
+              </li>
+              <li class="nav__list">
+                <a class="nav__link">CONTACT US</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="prev__container">
+          <table class="prev__table">
+            <tbody class="prev__list">
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">All</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win">
+                  <a class="prev__link">New Arrivals</a>
+                </td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Hot Sale</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Furniture</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Amrature</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Tabble</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Chair</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Sofa</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Mirrors</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Stools</a></td>
+              </tr>
+              <tr class="prev__str">
+                <td class="prev__win"><a class="prev__link">Benches</a></td>
+              </tr>
+            </tbody>
+          </table>
+          <article class="slider">
+            <div class="slider__gr-title">
+              <h3 class="slider__subtitle">TOP COLLECTIONS 2022</h3>
+              <h2 class="slider__title">We Serve Your Dream Furniture</h2>
+              <img class="slider__strip" src="./images/slider/strip.svg" />
+              <p class="slider__text">Get 50% off all products</p>
+              <a class="slider__btn">SHOP NOW</a>
+            </div>
+            <img
+              class="slider__img"
+              src="./images/slider/Furniture.png"
+              alt="Голубое кресло"
+            />
+            <div class="slider__gr-items">
+              <div class="slider__item">
+                <img
+                  class="slider__img-item"
+                  src="./images/slider/chair.png"
+                  alt="Белое кресло"
+                />
+                <p class="slider__item-text">
+                  $<span class="slider__item-text slider__item-text_big"
+                    >120</span
+                  >
+                </p>
+                <p class="slider__item-text slider__item-text_grey">
+                  Office Desk Chair
+                </p>
+              </div>
+              <div class="slider__item">
+                <img
+                  class="slider__img-item"
+                  src="./images/slider/sofa.png"
+                  alt="Бежевое кресло"
+                />
+                <p class="slider__item-text">
+                  $<span class="slider__item-text slider__item-text_big"
+                    >180</span
+                  >
+                </p>
+                <p class="slider__item-text slider__item-text_grey">
+                  Home Alisa Sofa
+                </p>
+              </div>
+              <div class="slider__item">
+                <img
+                  class="slider__img-item"
+                  src="./images/slider/chair-yellow.png"
+                  alt="Жёлтое кресло"
+                />
+                <p class="slider__item-text">
+                  $<span class="slider__item-text slider__item-text_big"
+                    >250</span
+                  >
+                </p>
+                <p class="slider__item-text slider__item-text_grey">
+                  Modern Chair
+                </p>
+              </div>
+            </div>
+            <div class="slider__buttons">
+              <div class="slider__round"></div>
+              <div class="slider__round"></div>
+              <div class="slider__round slider__round_active"></div>
+              <div class="slider__round"></div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
     <script src="./script/index.js"></script>
   </body>
