feat: "plus section, adaptive"

--- a/index.html
+++ b/index.html
@@ -196,6 +196,36 @@
           </article>
         </div>
       </section>
+      <section class="plus flex">
+        <div class="plus__card">
+          <img class="plus__img" src="./images/plus/delivery.svg" />
+          <div class="plus__text-gr">
+            <p class="plus__title">Free Shipping</p>
+            <p class="plus__text">Orders over $100</p>
+          </div>
+        </div>
+        <div class="plus__card">
+          <img class="plus__img" src="./images/plus/gift.svg" />
+          <div class="plus__text-gr">
+            <p class="plus__title">Smart Gift Card</p>
+            <p class="plus__text">Buy $1000 to get card</p>
+          </div>
+        </div>
+        <div class="plus__card">
+          <img class="plus__img" src="./images/plus/pay.svg" />
+          <div class="plus__text-gr">
+            <p class="plus__title">Quick Payment</p>
+            <p class="plus__text">100% secure payment</p>
+          </div>
+        </div>
+        <div class="plus__card">
+          <img class="plus__img" src="./images/plus/support.svg" />
+          <div class="plus__text-gr">
+            <p class="plus__title">24/7 Support</p>
+            <p class="plus__text">Quick support</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./script/index.js"></script>
