feat: "collection section, adaptive"

--- a/index.html
+++ b/index.html
@@ -226,6 +226,55 @@
           </div>
         </div>
       </section>
+      <section class="collection flex">
+        <div class="collection__container collection__container_big">
+          <div class="collection__gr-text">
+            <p class="collection__title">Modern Furniture Collections</p>
+            <p class="collection__subtitle">Starting from $500</p>
+            <div class="collection__gr-arr flex">
+              <p class="collection__text">Read more</p>
+              <img
+                class="collection__img-arr"
+                src="./images/collection/arrow.svg"
+              />
+            </div>
+          </div>
+        </div>
+        <div
+          class="collection__container collection__container_small collection__container_small_bookcase"
+        >
+          <div class="collection__gr-text">
+            <p class="collection__title">Geometric Bookcase</p>
+            <p class="collection__subtitle collection__subtitle_small">
+              Up to 20% discount
+            </p>
+            <div class="collection__gr-arr flex">
+              <p class="collection__text">Read more</p>
+              <img
+                class="collection__img-arr"
+                src="./images/collection/arrow.svg"
+              />
+            </div>
+          </div>
+        </div>
+        <div
+          class="collection__container collection__container_small collection__container_small_sofa"
+        >
+          <div class="collection__gr-text">
+            <p class="collection__title">Minimal Sofa collections</p>
+            <p class="collection__subtitle collection__subtitle_small">
+              Sale upto 40% discount
+            </p>
+            <div class="collection__gr-arr flex">
+              <p class="collection__text">Read more</p>
+              <img
+                class="collection__img-arr"
+                src="./images/collection/arrow.svg"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./script/index.js"></script>
