feat: "trending section, adaptive"

--- a/index.html
+++ b/index.html
@@ -275,6 +275,286 @@
           </div>
         </div>
       </section>
+      <section class="trending">
+        <p class="trending__title">TRENDING</p>
+        <div class="trending__links">
+          <p class="trending__link-title trending__link-title_active">
+            Top Products
+          </p>
+          <p class="trending__link-title">New Arrivals</p>
+          <p class="trending__link-title">Best Sellers</p>
+        </div>
+        <div class="trending__cards flex">
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/chair1.png')"
+            >
+              <div class="trending__gr-discount">
+                <p class="trending__discount-text">New</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Minimal LCD chair</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$180</p>
+                <p class="trending__price-grey">$250</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/chair2.png')"
+            >
+              <div class="trending__gr-discount">
+                <p class="trending__discount-text">New</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Minimal iconic chair</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$120</p>
+                <p class="trending__price-grey">$150</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star-inactive"
+                    src="./images/trending/star-inactive.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/chair1.png')"
+            >
+              <div class="trending__gr-discount trending__gr-discount_green">
+                <p class="trending__discount-text">Sale</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Dining chairs</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$100</p>
+                <p class="trending__price-grey">$120</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/chair4.png')"
+            >
+              <div class="trending__gr-discount trending__gr-discount_green">
+                <p class="trending__discount-text">Sale</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Buskbo armchair</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$130</p>
+                <p class="trending__price-grey">$150</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star-inactive"
+                    src="./images/trending/star-inactive.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./script/index.js"></script>
