--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
           <img class="header__img-logo" src="./images/header/logo.svg" />
           <h1 class="header__logo">Furniking</h1>
         </div>
-        <form class="header__search" action="" method="get">
+        <form class="header__search" method="get">
           <input
             class="header__search-line"
             placeholder="Search here"
             type="search"
           />
+          <!-- <select value="Невведённое имя">
+            <option>Пункт 1</option>
+            <option>Пункт 2</option>
+          </select> -->
           <button class="button header__btn-menu">
             <p class="header__menu-text">Categories</p>
             <img
@@ -226,7 +230,7 @@
           </div>
         </div>
       </section>
-      <section class="collection flex">
+      <section class="collection">
         <div class="collection__container collection__container_big">
           <div class="collection__gr-text">
             <p class="collection__title">Modern Furniture Collections</p>
@@ -276,7 +280,7 @@
         </div>
       </section>
       <section class="trending">
-        <p class="trending__title">TRENDING</p>
+        <h2 class="title trending__title">TRENDING</h2>
         <div class="trending__links">
           <p class="trending__link-title trending__link-title_active">
             Top Products
@@ -288,7 +292,7 @@
           <div class="trending__card">
             <div
               class="trending__gr-img"
-              style="background-image: url('./images/trending/chair1.png')"
+              style="background-image: url('./images/trending/Container.png')"
             >
               <div class="trending__gr-discount">
                 <p class="trending__discount-text">New</p>
@@ -355,7 +359,7 @@
           <div class="trending__card">
             <div
               class="trending__gr-img"
-              style="background-image: url('./images/trending/chair2.png')"
+              style="background-image: url('./images/trending/Container2.png')"
             >
               <div class="trending__gr-discount">
                 <p class="trending__discount-text">New</p>
@@ -422,7 +426,10 @@
           <div class="trending__card">
             <div
               class="trending__gr-img"
-              style="background-image: url('./images/trending/chair1.png')"
+              style="
+                background-image: url('./images/trending/Container3.png');
+                background-size: cover;
+              "
             >
               <div class="trending__gr-discount trending__gr-discount_green">
                 <p class="trending__discount-text">Sale</p>
@@ -549,6 +556,357 @@
                     class="trending__star-inactive"
                     src="./images/trending/star-inactive.svg"
                   />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/Container.png')"
+            >
+              <div class="trending__gr-discount">
+                <p class="trending__discount-text">New</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Minimal LCD chair</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$180</p>
+                <p class="trending__price-grey">$250</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/Container2.png')"
+            >
+              <div class="trending__gr-discount">
+                <p class="trending__discount-text">New</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Minimal iconic chair</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$120</p>
+                <p class="trending__price-grey">$150</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star-inactive"
+                    src="./images/trending/star-inactive.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="
+                background-image: url('./images/trending/Container3.png');
+                background-size: cover;
+              "
+            >
+              <div class="trending__gr-discount trending__gr-discount_green">
+                <p class="trending__discount-text">Sale</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Dining chairs</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$100</p>
+                <p class="trending__price-grey">$120</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="trending__card">
+            <div
+              class="trending__gr-img"
+              style="background-image: url('./images/trending/chair4.png')"
+            >
+              <div class="trending__gr-discount trending__gr-discount_green">
+                <p class="trending__discount-text">Sale</p>
+              </div>
+              <div class="trending__gr-btn">
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/Heart.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/bag.svg"
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/refresh.svg
+                    "
+                  />
+                </button>
+                <button class="trending__btn">
+                  <img
+                    class="trending__btn-img"
+                    src="./images/trending/view.svg"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="trending__gr-text">
+              <p class="trending__text">Chair</p>
+              <p class="trending__subtitle">Buskbo armchair</p>
+              <div class="trending__gr-price">
+                <p class="trending__price-green">$130</p>
+                <p class="trending__price-grey">$150</p>
+                <div class="trending__gr-stars">
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star"
+                    src="./images/trending/star.svg"
+                  />
+                  <img
+                    class="trending__star-inactive"
+                    src="./images/trending/star-inactive.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="trending__gr-switch-btn flex">
+          <button
+            class="trending__switch-btn trending__switch-btn_active"
+          ></button>
+          <button class="trending__switch-btn"></button>
+        </div>
+      </section>
+      <section class="offer">
+        <h2 class="title offer__main-title">SPECIAL OFFER</h2>
+        <div class="offer__cards">
+          <div class="offer__card">
+            <div class="discount offer__discount">
+              <p class="discount__text">40% off</p>
+            </div>
+            <div class="offer__group">
+              <p class="offer__title">Living Room Furniture</p>
+              <p class="offer__text">
+                You don't have a chair. Are you ready for growth? Shop with us
+                40% discount!
+              </p>
+              <div class="offer__price-gr">
+                <p class="offer__price">$150</p>
+                <p class="offer__price offer__price_old">$250</p>
+                <button class="offer__btn">SHOP NOW</button>
+              </div>
+              <div class="offer__counter-gr">
+                <div class="offer__counter">
+                  <p class="offer__counter-text">10</p>
+                  <p class="offer__counter-name">DAYS</p>
+                </div>
+                <div class="offer__counter">
+                  <p class="offer__counter-text">15</p>
+                  <p class="offer__counter-name">HRS</p>
+                </div>
+                <div class="offer__counter">
+                  <p class="offer__counter-text">30</p>
+                  <p class="offer__counter-name">MIN</p>
+                </div>
+                <div class="offer__counter">
+                  <p class="offer__counter-text">22</p>
+                  <p class="offer__counter-name">SECS</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="offer__card offer__card_chair">
+            <div class="discount offer__discount">
+              <p class="discount__text">40% off</p>
+            </div>
+            <div class="offer__group">
+              <p class="offer__title">Modern chair</p>
+              <p class="offer__text">
+                Hot chairs of the modern era are now available in our stock.
+              </p>
+              <div class="offer__price-gr">
+                <p class="offer__price">$75</p>
+                <p class="offer__price offer__price_old">$150</p>
+                <button class="offer__btn">SHOP NOW</button>
+              </div>
+              <div class="offer__counter-gr">
+                <div class="offer__counter">
+                  <p class="offer__counter-text">15</p>
+                  <p class="offer__counter-name">DAYS</p>
+                </div>
+                <div class="offer__counter">
+                  <p class="offer__counter-text">08</p>
+                  <p class="offer__counter-name">HRS</p>
+                </div>
+                <div class="offer__counter">
+                  <p class="offer__counter-text">20</p>
+                  <p class="offer__counter-name">MIN</p>
+                </div>
+                <div class="offer__counter">
+                  <p class="offer__counter-text">12</p>
+                  <p class="offer__counter-name">SECS</p>
                 </div>
               </div>
             </div>
