--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,38 @@
           </div>
         </div>
       </section>
+      <section class="customer">
+        <h3 class="title customer__title">What Our Customer Says</h3>
+        <div class="customer__slider">
+          <button class="customer__btn-slider customer__btn-slider-right">
+            <img
+              class="customer__btn-arr-right"
+              src="./images/customer/arr-right.svg"
+            />
+          </button>
+          <div class="customer__slider-main">
+            <img
+              class="customer__img-avatar"
+              src="./images/customer/avatar.png"
+            />
+            <p class="customer__text">
+              I like Furniking.com and as compared to other company it's polices
+              and customers support is very good easy to reach., also many time
+              they unable to delivered. The ultricies are pregnant while the
+              quis is suspended. Risus commodo viverra maecenas accumsan lacus
+              vel facilisist amet.
+            </p>
+            <p class="customer__slider-title">Angelina Joly</p>
+            <p class="customer__slider-sub-title">Co-founder</p>
+          </div>
+          <button class="customer__btn-slider customer__btn-slider-left">
+            <img
+              class="customer__btn-arr-left"
+              src="./images/customer/arr-left.svg"
+            />
+          </button>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./script/index.js"></script>
