feat: "article, adaptive"

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <div
               class="trending__gr-img"
               style="
-                background-image: url('./images/trending/Container3.png');
+                background-image: url('./images/trending/chair3.png');
                 background-size: cover;
               "
             >
@@ -516,7 +516,7 @@
           <div class="trending__card">
             <div
               class="trending__gr-img"
-              style="background-image: url('./images/trending/Container.png')"
+              style="background-image: url('./images/trending/chair5.png')"
             >
               <div class="trending__gr-discount trending__gr-discount_green">
                 <p class="trending__discount-text">Sale</p>
@@ -568,7 +568,7 @@
           <div class="trending__card">
             <div
               class="trending__gr-img"
-              style="background-image: url('./images/trending/Container2.png')"
+              style="background-image: url('./images/trending/chair6.png')"
             >
               <div class="trending__gr-discount trending__gr-discount_green">
                 <p class="trending__discount-text">Sale</p>
@@ -621,7 +621,7 @@
             <div
               class="trending__gr-img"
               style="
-                background-image: url('./images/trending/Container3.png');
+                background-image: url('./images/trending/chair7.png');
                 background-size: cover;
               "
             >
@@ -675,7 +675,7 @@
           <div class="trending__card">
             <div
               class="trending__gr-img"
-              style="background-image: url('./images/trending/chair4.png')"
+              style="background-image: url('./images/trending/chair8.png')"
             >
               <div class="trending__gr-discount">
                 <p class="trending__discount-text">New</p>
@@ -989,7 +989,7 @@
             </div>
             <div class="trending__gr-text">
               <p class="trending__text">Chair</p>
-              <p class="trending__subtitle">Minimal iconic chair</p>
+              <p class="trending__subtitle">Microfiber Sofa</p>
               <div class="trending__gr-price">
                 <p class="trending__price-green">$120</p>
                 <p class="trending__price-grey">$150</p>
@@ -1056,7 +1056,7 @@
             </div>
             <div class="trending__gr-text">
               <p class="trending__text">Chair</p>
-              <p class="trending__subtitle">Minimal iconic chair</p>
+              <p class="trending__subtitle">Wood Coffee Tables</p>
               <div class="trending__gr-price">
                 <p class="trending__price-green">$120</p>
                 <p class="trending__price-grey">$150</p>
@@ -1123,7 +1123,7 @@
             </div>
             <div class="trending__gr-text">
               <p class="trending__text">Chair</p>
-              <p class="trending__subtitle">Minimal iconic chair</p>
+              <p class="trending__subtitle">Acacia Wood Club Chairs</p>
               <div class="trending__gr-price">
                 <p class="trending__price-green">$120</p>
                 <p class="trending__price-grey">$150</p>
@@ -1190,7 +1190,7 @@
             </div>
             <div class="trending__gr-text">
               <p class="trending__text">Chair</p>
-              <p class="trending__subtitle">Minimal iconic chair</p>
+              <p class="trending__subtitle">Amalia Cowhide Bench</p>
               <div class="trending__gr-price">
                 <p class="trending__price-green">$120</p>
                 <p class="trending__price-grey">$150</p>
@@ -1257,7 +1257,7 @@
             </div>
             <div class="trending__gr-text">
               <p class="trending__text">Chair</p>
-              <p class="trending__subtitle">Minimal iconic chair</p>
+              <p class="trending__subtitle">Juno-Hinged Lid Storage</p>
               <div class="trending__gr-price">
                 <p class="trending__price-green">$120</p>
                 <p class="trending__price-grey">$150</p>
@@ -1324,7 +1324,7 @@
             </div>
             <div class="trending__gr-text">
               <p class="trending__text">Chair</p>
-              <p class="trending__subtitle">Minimal iconic chair</p>
+              <p class="trending__subtitle">Delicia 3 Piece Living Room</p>
               <div class="trending__gr-price">
                 <p class="trending__price-green">$120</p>
                 <p class="trending__price-grey">$150</p>
@@ -1415,8 +1415,183 @@
           </button>
         </div>
       </section>
+      <section class="article">
+        <h3 class="title article__title">Our Latest Articles</h3>
+        <div class="article__cards">
+          <div
+            class="article__card"
+            style="background-image: url(./images/article/furniture-bg.png)"
+          >
+            <div class="article__card-main">
+              <div class="article__tags-data">
+                <div class="article__tag">
+                  <img
+                    class="article__img-tag"
+                    src="./images/article/tag.svg"
+                  />
+                  <p class="article__tag-text">FURNITURE</p>
+                </div>
+                <p class="article__data">23 September 2022</p>
+              </div>
+              <p class="article__card-title">
+                Begineer guide buying minimal sofa
+              </p>
+              <p class="article__card-text">Read more</p>
+            </div>
+          </div>
+          <div
+            class="article__card"
+            style="background-image: url(./images/article/table-bg.png)"
+          >
+            <div class="article__card-main">
+              <div class="article__tags-data">
+                <div class="article__tag">
+                  <img
+                    class="article__img-tag"
+                    src="./images/article/tag.svg"
+                  />
+                  <p class="article__tag-text">TABLE</p>
+                </div>
+                <p class="article__data">23 September 2022</p>
+              </div>
+              <p class="article__card-title">
+                Buying best minimal computer table
+              </p>
+              <p class="article__card-text">Read more</p>
+            </div>
+          </div>
+          <div
+            class="article__card"
+            style="background-image: url(./images/article/bench-bg.png)"
+          >
+            <div class="article__card-main">
+              <div class="article__tags-data">
+                <div class="article__tag">
+                  <img
+                    class="article__img-tag"
+                    src="./images/article/tag.svg"
+                  />
+                  <p class="article__tag-text">BENCH</p>
+                </div>
+                <p class="article__data">23 march 2022</p>
+              </div>
+              <p class="article__card-title">How to choose best modern bench</p>
+              <p class="article__card-text">Read more</p>
+            </div>
+          </div>
+          <div
+            class="article__card"
+            style="background-image: url(./images/article/chair-bg.png)"
+          >
+            <div class="article__card-main">
+              <div class="article__tags-data">
+                <div class="article__tag">
+                  <img
+                    class="article__img-tag"
+                    src="./images/article/tag.svg"
+                  />
+                  <p class="article__tag-text">CHAIR</p>
+                </div>
+                <p class="article__data">23 march 2022</p>
+              </div>
+              <p class="article__card-title">
+                Best Summer Outfit Style in this Country
+              </p>
+              <p class="article__card-text">Read more</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__first-section">
+        <div class="footer__desc-gr">
+          <div class="footer__logo-gr">
+            <img class="footer__logo-img" src="./images/header/logo.svg" />
+            <p class="footer__logo-text">Furniking</p>
+          </div>
+          <p class="footer__desc-text">
+            Funking is the a popular Ecommerce site. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do eiusmod tempor
+          </p>
+          <a class="footer__messenger-logo" href="#">
+            <img
+              class="footer__messenger-img"
+              src="./images/footer/messenger.png"
+            />
+          </a>
+        </div>
+        <section class="footer__list-wrap footer__list-wrap_help">
+          <div class="footer__header-wrap">
+            <h4 class="footer__header">Help</h4>
+            <button class="footer__btn-open"></button>
+          </div>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a>Privacy Policy</a>
+            </li>
+            <li class="footer__item">
+              <a>Shipping & Delivery</a>
+            </li>
+            <li class="footer__item">
+              <a>Refund Policy</a>
+            </li>
+            <li class="footer__item">
+              <a>Track Your Order</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__list-wrap footer__list-wrap_store">
+          <div class="footer__header-wrap">
+            <h4 class="footer__header">Store</h4>
+            <button class="footer__btn-open"></button>
+          </div>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a>Furniture</a>
+            </li>
+            <li class="footer__item">
+              <a>Tabble</a>
+            </li>
+            <li class="footer__item">
+              <a>Sofa</a>
+            </li>
+            <li class="footer__item">
+              <a>Other</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__list-wrap footer__list-wrap_supports">
+          <div class="footer__header-wrap">
+            <h4 class="footer__header">Supports</h4>
+            <button class="footer__btn-open"></button>
+          </div>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a>Feedbcak</a>
+            </li>
+            <li class="footer__item">
+              <a>Contact us</a>
+            </li>
+            <li class="footer__item">
+              <a>Download app</a>
+            </li>
+            <li class="footer__item">
+              <a>Terms conditins</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="footer__second-section">
+        <div class="footer__line"></div>
+        <p class="footer__text">© 2021 Funking - All rights reserved.</p>
+        <div class="footer__small-list">
+          <a class="footer__text footer__small-link">Privacy</a>
+          <a class="footer__text footer__small-link">Security</a>
+          <a class="footer__text footer__small-link">Terms</a>
+        </div>
+      </div>
+    </footer>
     <script src="./script/index.js"></script>
   </body>
 </html>
